[package]
name = "base"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Base utilities and common types for rara"

[dependencies]
derive_more = { workspace = true }
rustix = { workspace = true, features = ["process"] }
schemars.workspace = true
serde.workspace = true
tracing.workspace = true
utoipa.workspace = true
uuid.workspace = true

[lints]
workspace = true
