[package]
name = "rara-error"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Error types and handling utilities for rara"

[dependencies]
http = { workspace = true }
serde = { workspace = true }
snafu.workspace = true
strum = { workspace = true }
strum_macros = { workspace = true }
tonic = { workspace = true }

[lints]
workspace = true
